# agentrail

./: .gitignore  AGENTS.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  RELEASE.md  epics.md  main.py  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml  release.yml
docs/: ADAPTER_GUIDE.md  SECURITY.md
scripts/: __init__.py  build_release_bundle.py  release_metadata.py  render_homebrew_formula.py
src/agentrail/: __init__.py  agent_registry.py  cli.py  config.py  errors.py  git_state.py  handoff_schema.py  handoff_writer.py  models.py  paths.py  redaction.py  security.py  summary.py  transcript_excerpt.py
src/agentrail/adapters/: _file_source.py  base.py  claude.py  codex.py  gemini.py  opencode.py
src/agentrail/prompt/: __init__.py  claude.py  codex.py  common.py  gemini.py  opencode.py
tests/: test_adapters.py  test_binary_smoke.py  test_cli_flow.py  test_cli_polish.py  test_cli_version.py  test_codex_discovery.py  test_coverage_edge.py  test_file_source_discovery.py  test_gemini_prompt.py  test_git_state.py  test_handoff_schema.py  test_homebrew_formula.py  test_infrastructure.py  test_new_adapters.py  test_prompt_common.py  test_redaction.py  test_release_bundle.py  test_release_metadata.py  test_security.py
