[project]
name = "agentrail"
version = "0.1.0"
description = "Portable coding-agent handoff CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.11,<3",
  "typer>=0.16,<1",
]

[project.scripts]
agentrail = "agentrail.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.11,<0.12",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentrail"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
